--- a/src/styles/DeleteConfirmationModal.module.css
+++ b/src/styles/DeleteConfirmationModal.module.css
@@ -4,14 +4,14 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.2);
     display: flex;
     justify-content: center;
     align-items: center;
   }
   
   .modalContent {
-    background-color: #fff;
+    background-color: #313131;
     padding: 3rem 4rem;
     border-radius: 5px;
     position: relative;
@@ -26,14 +26,14 @@
     background-color: #ef3f5f;
     padding: 0.4rem;
     border: none;
-    border-radius: 50%;
+    border-radius: 0.2rem;
     position: absolute;
     display: flex;
     align-items: center;
     justify-content: center;
     top: 10px;
     right: 10px;
-    font-size: 0.7rem;
+    font-size: 1.5rem;
     cursor: pointer;
     color: #fff;
     transition: all 300ms ease-in-out;
@@ -45,24 +45,38 @@
 
 .deleteHeading{
     font-size: 1.5rem;
+    color: #fff;
+    user-select: none;
     font-family: 'Poppins', sans-serif;
 }
 
 .itemContent{
+  user-select: none;
     margin-top: 1.5rem;
     margin-bottom: 1.5rem;
     width: 600px;
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content:column;
     gap: 0.6rem;
-    background-color: #eeeeee74;
+    background-color: #444;
+    color: #eee;
     padding: 1rem 2rem;
     border-radius: 0.4rem;
     border: 1px solid #55555523;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     font-size: 1.1rem;
+}
+
+.itemContent a {
+  color: #0a52ed;
+}
+
+.itemContent>p{
+  width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+   white-space: nowrap;
 }
 
 .buttonSection{
