--- a/src/styles/UserStats.module.css
+++ b/src/styles/UserStats.module.css
@@ -8,6 +8,7 @@
     background-color: #1E1E1E;
     padding-bottom: 1rem;
     padding-top: 2rem;
+    user-select: none;
 }
 
 .userStatsHeading {
